@@ -1,10 +1,12 @@
 2.1 Released ?? July 2012
 
+* Add SetTimeUTC() for using UTC time instead of local one
 * Add SetTickShift() for additional shift of tick labels
 * Add cmake options 'enable-png' and 'enable-zlib'
 * Add mglTriangulation() using s_hull_pro algorithm
 * Add mglData::Grid() and mglGraph::DataGrid() for filling regular data by values of triangulated surface
 * Add mglGraph::MPI_Send() and mglGraph::MPI_Recv()
+* Add parallel build for documentation
 * Bugfix for setting text size
 * Bugfix for handling NAN color value
 
